Fix for storing the second+ game